[package]
authors = ["Mike <mike@litprotocol.com>"]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
blsful = {  version = "2", default-features = false, features = ["rust"] }
console_error_panic_hook = "0.1"
base64_light = "0.1"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_bare = "0.5"
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
quote = "1.0"
sha2 = "0.10.8"
base64 = "0.13"

[dev-dependencies]
ciborium = "0.2"
k256 = "0.13"
rand = "0.8"
rand_chacha = "0.3"
wasm-bindgen-test = "0.3"
